# godot-nexus-coda

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  SConstruct  project.godot
.github/workflows/: gdextension.yml
addons/nexus_coda/: nexus_coda.gdextension  nexus_coda.gdextension.template  nexus_coda.gdextension.uid  plugin.cfg  plugin.gd  plugin.gd.uid
addons/nexus_coda/domain/: coda_bank.gd.uid  coda_browser_node.gd  coda_browser_node.gd.uid  coda_bus.gd  coda_bus.gd.uid  coda_bus_send.gd  coda_bus_send.gd.uid  coda_event_graph.gd  coda_event_graph.gd.uid  coda_event_graph_node_data.gd  coda_event_graph_node_data.gd.uid  coda_event_parameter.gd  coda_event_property.gd  coda_event_property.gd.uid  coda_game_sync_rule.gd.uid  coda_play_options.gd  coda_play_options.gd.uid  coda_project.gd  coda_project.gd.uid  coda_project_index.gd  coda_project_index.gd.uid  coda_project_serializer.gd  coda_snapshot.gd  coda_timeline_transport.gd  coda_timeline_transport.gd.uid  (+2 more)
docs/: TODO.md  godot-integration.md
graphics/: event.afdesign  folder.afdesign  player.afdesign
project/: icon.svg.import  project.godot
scripts/: deploy_addon.py  dump_extension_api.ps1  sync_addon_from_project.ps1  sync_addon_to_project.ps1
src/: nexus_coda_stub.cpp  nexus_coda_stub.h  nexus_coda_stub.windows.template_debug.x86_64.obj.import  register_types.cpp  register_types.h  register_types.windows.template_debug.x86_64.obj.import
test_run/: project.godot  trace_nan_json.gd  trace_nan_json.gd.uid
tests/: smoke_test.cpp
(+419 files in other folders)
